--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0-alpha3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "node-libs-browser": "^2.2.1",
+    "parse-link-header": "^2.0.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
+    "vue3-carousel": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/parse-link-header": "^2.0.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2"
   },
   "eslintConfig": {
     "root": true,
